Enable search function and adjust implementation of search bar
Enable search function in base page search bar. Modified the
implementation of amazon style search bar

--- a/src/sam-angular/sam-searchbar/sam-searchbar.template.html
+++ b/src/sam-angular/sam-searchbar/sam-searchbar.template.html
@@ -2,11 +2,10 @@
 
   <form class="usa-search marginCenter relative" onsubmit="return false;">
 
-    <div class="usa-width-one-sixths" style="position: absolute; left: 0;">
-      <label #filter class=" black-text filter-btn pull-right" id="filter" >
-        <span class="usa-search-submit-text" >{{filterValue}}&nbsp;&nbsp;<i class="fa fa-caret-down"></i></span>
-      </label>
-
+    <div class="relative div-left">
+      <label class=" black-text filter-btn pull-right" >
+      <span class="usa-search-submit-text" >{{filterValue}}&nbsp;&nbsp;<i class="fa fa-caret-down"></i></span>
+    </label>
       <samSelect2 class="filter-select"
                   [(model)]="selectModel"
                   [options]="selectConfig.options"
@@ -17,13 +16,18 @@
                   (modelChange)='onSelect($event)'>
       </samSelect2>
     </div>
-    <div class="usa-width-one-whole usa-search-small" id="search-bar-div" #wholediv>
 
-      <button #searchbtn type="submit"
-              class="pull-right usa-search-submit search-btn">
-        <span class="usa-search-submit-text">{{searchBtnText}} <i class="fa" [ngClass]="{'fa-search':size==='small'}"></i></span>
+    <div class="relative div-right">
+      <button type="submit"
+              class="usa-button-primary usa-search-submit search-btn" (click)="onSearch()">
+        <span class="usa-search-submit-text">{{searchBtnText}}
+          <i class="fa" [ngClass]="{'fa-search':size==='small'}"></i>
+        </span>
       </button>
-      <input #inputbar [style.width]="inputbarWidth+'px'" id="search-input" style="float: right;max-width: 800px" type="search" name="search">
+    </div>
+
+    <div class="relative div-fill">
+      <input class="search-inputbar" type="search" name="search" [(ngModel)]="keyword">
 
     </div>
 
