--- a/src/sam-angular/sam-searchbar/sam-searchbar.template.html
+++ b/src/sam-angular/sam-searchbar/sam-searchbar.template.html
@@ -1,6 +1,6 @@
 <div class="usa-grid m_B-6x" id="search-div">
 
-  <form class="usa-search marginCenter relative" onsubmit="return false;">
+  <form class="usa-search relative" onsubmit="return false;">
 
     <div class="relative div-left">
       <label class=" black-text filter-btn pull-right" >
@@ -19,7 +19,7 @@
 
     <div class="relative div-right">
       <button type="submit"
-              class="usa-button-primary usa-search-submit search-btn" (click)="onSearch()">
+              class="usa-button-primary usa-search-submit search-btn" (click)="onSearchClick()">
         <span class="usa-search-submit-text">{{searchBtnText}}
           <i class="fa" [ngClass]="{'fa-search':size==='small'}"></i>
         </span>
