Add in angle-down to the browse topics section, change header height
(1). Add in angle-down to the browse topics section, change header
height
(2). Fix tests broken by adding searchbar component

--- a/src/sam-angular/sam-banner/sam-banner.template.html
+++ b/src/sam-angular/sam-banner/sam-banner.template.html
@@ -8,7 +8,7 @@
                     <a id="official-site-toggle-link" (click)="toggleDetails()">Here's how you
                     know<i class="fa" [ngClass]="{'fa-angle-up': showDetail,'fa-angle-down': !showDetail} "></i></a></span>
 
-                  <span class="pull-right">This site is in beta and a work in progress &nbsp;
+                  <span class="pull-right m_R-1x">This site is in beta and a work in progress &nbsp;
                       <a id="close-link" (click)="closeBanner()"><i class="fa fa-times-circle"></i></a>
                   </span>
 
@@ -22,7 +22,7 @@
             <span><i class="fa fa-bank"></i> </span>
           </div>
         </div>
-        <div class="usa-width-three-fourths banner-text">
+        <div class="usa-width-three-fourths">
           <p><strong> The .gov means it's official.</strong><br>
             Federal government websites always use a <strong>.gov</strong> or .mil domain. Before
             sharing
@@ -37,7 +37,7 @@
             <span><i class="fa fa-lock"></i> </span>
           </div>
         </div>
-        <div class="usa-width-three-fourths banner-text">
+        <div class="usa-width-three-fourths">
           <p>This site is also protected by an SSL(Secure Sockets Layer) certificate that's been signed by
             the
             U.S.
