--- a/src/sam-angular/sam-banner/sam-banner.template.html
+++ b/src/sam-angular/sam-banner/sam-banner.template.html
@@ -1,20 +1,20 @@
 <nav class="sticky-banner" *ngIf="showBanner">
-  <div class="banner-text m_L-1x" id="official-site-text-header">
+  <div class="m_L-1x">
 
     <img title="An official website of the United States Government" class="image-wrap"
          src="../../assets/img/us_flag_small.png" alt="US Flag Logo"/>
 
                   <span>An official website of the United States Government &nbsp;
-                    <a id="official-site-toggle-link" (click)="toggleDetails()">Here's how you
+                    <a (click)="toggleDetails()">Here's how you
                     know<i class="fa" [ngClass]="{'fa-angle-up': showDetail,'fa-angle-down': !showDetail} "></i></a></span>
 
                   <span class="pull-right m_R-1x">This site is in beta and a work in progress &nbsp;
-                      <a id="close-link" (click)="closeBanner()"><i class="fa fa-times-circle"></i></a>
+                      <a (click)="closeBanner()"><i class="fa fa-times-circle"></i></a>
                   </span>
 
   </div>
   <!--gov banner expand: explain the website is official-->
-  <div class="usa-grid-full" id="official-site-detail-header" *ngIf="showDetail">
+  <div class="usa-grid-full" *ngIf="showDetail">
     <div class="usa-width-one-whole">
       <div class="usa-width-one-half">
         <div class="usa-width-one-fourth m_T-4x">
@@ -48,7 +48,7 @@
       </div>
     </div>
     <div class="usa-width-one-whole centered">
-      <a id="collapse-link" (click)="toggleDetails()"><span><i class="fa fa-angle-double-up"></i> </span></a>
+      <a (click)="toggleDetails()"><span><i class="fa fa-angle-double-up"></i> </span></a>
     </div>
 
   </div>
