--- a/src/sam-angular/sam-searchbar/sam-searchbar.template.html
+++ b/src/sam-angular/sam-searchbar/sam-searchbar.template.html
@@ -21,7 +21,7 @@
       <button type="submit"
               class="usa-button-primary usa-search-submit search-btn" (click)="onSearchClick()">
         <span class="usa-search-submit-text">{{searchBtnText}}
-          <i class="fa" [ngClass]="{'fa-search':size==='small'}"></i>
+          <i class="fa" [ngClass]="{'fa-search':isSizeSmall()}"></i>
         </span>
       </button>
     </div>
