--- a/src/sam-angular/sam-searchbar/sam-searchbar.template.html
+++ b/src/sam-angular/sam-searchbar/sam-searchbar.template.html
@@ -4,7 +4,7 @@
 
     <div class="relative div-left">
       <button class="filter-btn pull-right" >
-      <span class="usa-search-submit-text" >{{filterValue}}&nbsp;&nbsp;<i class="fa fa-caret-down"></i></span>
+      <span class="usa-search-submit-text" >{{getLabelForValue(filterValue)}}&nbsp;&nbsp;<i class="fa fa-caret-down"></i></span>
     </button>
       <samSelect2 class="filter-select"
                   [(model)]="selectModel"
