enter btn fix and index/pagination fixes

--- a/src/sam-angular/sam-searchbar/sam-searchbar.template.html
+++ b/src/sam-angular/sam-searchbar/sam-searchbar.template.html
@@ -27,7 +27,7 @@
     </div>
 
     <div class="relative div-fill">
-      <input class="search-inputbar" type="search" name="search" [(ngModel)]="keyword" [placeholder]="placeholder">
+      <input class="search-inputbar" type="search" name="search" [(ngModel)]="keyword" [placeholder]="placeholder" (keyup.enter)="onSearchClick()">
 
     </div>
 
