check for 508 compliance for the <samSelect> component

--- a/src/ui-kit/form-controls/searchbar/searchbar.template.html
+++ b/src/ui-kit/form-controls/searchbar/searchbar.template.html
@@ -8,6 +8,7 @@
     </button>
       <samSelect class="filter-select"
                  [(model)]="selectModel"
+                 [name]="selectConfig.name"
                  [options]="selectConfig.options"
                  [label]="selectConfig.label"
                  [hint]="selectConfig.hint"
