Update footer links text

--- a/src/ui-kit/footer/footer.template.html
+++ b/src/ui-kit/footer/footer.template.html
@@ -10,7 +10,7 @@
           <ul class="sam-footer-links usa-unstyled-list">
             <li class="m_B"><a href="#" title="Who we are">Who we are</a></li>
             <li class="m_B"><a href="#" title="System Alerts">System Alerts</a></li>
-            <li class="m_B"><a href="#" title="Explore Community">Explore Community</a></li>
+            <li class="m_B"><a href="#" title="Explore Community">Explore Our Community</a></li>
           </ul>
         </li>
         <li class=" usa-width-one-fourth">
@@ -19,7 +19,7 @@
             <li class="m_B"><a href="https://www.acquisition.gov/" title="Acquisition.gov">Acquisition.gov</a></li>
             <li class="m_B"><a href="https://www.usaspending.gov/Pages/Default.aspx" title="USASpending.gov">USASpending.gov</a></li>
             <li class="m_B"><a href="http://www.grants.gov/" title="Grants.gov">Grants.gov</a></li>
-            <li class="m_B"><a href="#" title="Move Partners">Move Partners</a></li>
+            <li class="m_B"><a href="#" title="Move Partners">More Partners</a></li>
           </ul>
         </li>
         <li class=" usa-width-one-fourth">
@@ -36,7 +36,7 @@
             <li class="m_B"><a href="{{SITE_ROOT}}/accessibility/" title="Accessibility">Accessibility</a></li>
             <li class="m_B"><a href="${SITE_ROOT}/legal/" title="Legal">Legal</a></li>
             <li class="m_B"><a href="#" title="Privacy Policy">Privacy Policy</a></li>
-            <li class="m_B"><a href="#" title="Term of Use">Term of Use</a></li>
+            <li class="m_B"><a href="#" title="Term of Use">Terms of Use</a></li>
           </ul>
         </li>
       </ul>
