--- a/src/ui-kit/footer/footer.template.html
+++ b/src/ui-kit/footer/footer.template.html
@@ -34,7 +34,7 @@
           <h4 class="m_T-0 sam-footer-head">Policies</h4>
           <ul class="sam-footer-links usa-unstyled-list">
             <li class="m_B"><a href="{{SITE_ROOT}}/accessibility/" title="Accessibility">Accessibility</a></li>
-            <li class="m_B"><a href="${SITE_ROOT}/legal/" title="Legal">Legal</a></li>
+            <li class="m_B"><a href="{{SITE_ROOT}}/legal/" title="Legal">Legal</a></li>
             <li class="m_B"><a href="#" title="Privacy Policy">Privacy Policy</a></li>
             <li class="m_B"><a href="#" title="Terms of Use">Terms of Use</a></li>
           </ul>
