Update external links and internal links

--- a/src/ui-kit/footer/footer.template.html
+++ b/src/ui-kit/footer/footer.template.html
@@ -10,7 +10,7 @@
           <ul class="sam-footer-links usa-unstyled-list">
             <li class="m_B"><a href="#" title="Who we are">Who we are</a></li>
             <li class="m_B"><a href="#" title="System Alerts">System Alerts</a></li>
-            <li class="m_B"><a href="#" title="Explore Our Community">Explore Our Community</a></li>
+            <li class="m_B"><a href="https://interact.gsa.gov/group/integrated-award-environment-iae-industry-community" title="Explore Our Community">Explore Our Community</a></li>
           </ul>
         </li>
         <li class=" usa-width-one-fourth">
@@ -33,8 +33,8 @@
         <li class=" usa-width-one-fourth">
           <h4 class="m_T-0 sam-footer-head">Policies</h4>
           <ul class="sam-footer-links usa-unstyled-list">
-            <li class="m_B"><a href="{{SITE_ROOT}}/accessibility/" title="Accessibility">Accessibility</a></li>
-            <li class="m_B"><a href="{{SITE_ROOT}}/legal/" title="Legal">Legal</a></li>
+            <li class="m_B"><a href="#" title="Accessibility">Accessibility</a></li>
+            <li class="m_B"><a href="#" title="Legal">Legal</a></li>
             <li class="m_B"><a href="#" title="Privacy Policy">Privacy Policy</a></li>
             <li class="m_B"><a href="#" title="Terms of Use">Terms of Use</a></li>
           </ul>
