--- a/src/ui-kit/banner/banner.template.html
+++ b/src/ui-kit/banner/banner.template.html
@@ -1,4 +1,4 @@
-<nav class="sticky-banner" *ngIf="showBanner">
+<nav class="sticky-banner">
   <div class="m_L-1x">
 
     <img title="An official website of the United States Government" class="image-wrap"
@@ -9,7 +9,6 @@
                     know<i class="fa" [ngClass]="{'fa-angle-up': showDetail,'fa-angle-down': !showDetail} "></i></a></span>
 
                   <span class="pull-right m_R-1x">This site is in beta and a work in progress &nbsp;
-                      <a (click)="closeBanner()"><i class="fa fa-times-circle"></i></a>
                   </span>
 
   </div>
