--- a/src/ui-kit/footer/footer.template.html
+++ b/src/ui-kit/footer/footer.template.html
@@ -10,15 +10,15 @@
           <ul class="sam-footer-links usa-unstyled-list">
             <li class="m_B"><a href="#" title="Who we are">Who we are</a></li>
             <li class="m_B"><a href="#" title="System Alerts">System Alerts</a></li>
-            <li class="m_B"><a href="https://interact.gsa.gov/group/integrated-award-environment-iae-industry-community" title="Explore Our Community">Explore Our Community</a></li>
+            <li class="m_B"><a class="usa-external_link-alt" href="https://interact.gsa.gov/group/integrated-award-environment-iae-industry-community" title="Explore Our Community">Explore Our Community</a></li>
           </ul>
         </li>
         <li class=" usa-width-one-fourth">
           <h4 class="m_T-0 sam-footer-head">Partners</h4>
           <ul class="sam-footer-links usa-unstyled-list">
-            <li class="m_B"><a href="https://www.acquisition.gov/" title="Acquisition.gov">Acquisition.gov</a></li>
-            <li class="m_B"><a href="https://www.usaspending.gov/Pages/Default.aspx" title="USASpending.gov">USASpending.gov</a></li>
-            <li class="m_B"><a href="http://www.grants.gov/" title="Grants.gov">Grants.gov</a></li>
+            <li class="m_B"><a class="usa-external_link-alt" href="https://www.acquisition.gov/" title="Acquisition.gov">Acquisition.gov</a></li>
+            <li class="m_B"><a class="usa-external_link-alt" href="https://www.usaspending.gov/Pages/Default.aspx" title="USASpending.gov">USASpending.gov</a></li>
+            <li class="m_B"><a class="usa-external_link-alt" href="http://www.grants.gov/" title="Grants.gov">Grants.gov</a></li>
             <li class="m_B"><a href="#" title="More Partners">More Partners</a></li>
           </ul>
         </li>
@@ -26,7 +26,7 @@
           <h4 class="m_T-0 sam-footer-head">Customer Service</h4>
           <ul class="sam-footer-links usa-unstyled-list">
             <li class="m_B"><a href="#" title="Online Help">Online Help</a></li>
-            <li class="m_B"><a href="https://fsd.gov/fsd-gov/login.do" title="Contact Federal Service Desk">Contact Federal Service Desk</a></li>
+            <li class="m_B"><a class="usa-external_link-alt" href="https://fsd.gov/fsd-gov/login.do" title="Contact Federal Service Desk">Contact Federal Service Desk</a></li>
             <li class="m_B"><a href="#" title="Reference Library">Reference Library</a></li>
           </ul>
         </li>
