changes the logic to determine the number of alerts to display

--- a/src/ui-kit/alert/alert.template.html
+++ b/src/ui-kit/alert/alert.template.html
@@ -6,9 +6,6 @@
         <a><i class="fa fa-times-circle" (click)="onDismissClick()"></i></a>
       </span>
     </h3>
-    <p class="usa-alert-text truncate" *ngIf="showDescription">{{description}}</p>
-    <div *ngIf="showGoToAlerts">
-      <a class="usa-nav-link" [routerLink]="['/system-alerts']">More alerts&nbsp;<i class="fa fa-arrow-circle-o-right"></i></a>
-    </div>
+    <p class="usa-alert-text">{{description}}</p>
   </div>
 </div>
