Update home page header and search header

--- a/src/ui-kit/footer/footer.template.html
+++ b/src/ui-kit/footer/footer.template.html
@@ -1,4 +1,4 @@
-<footer class="m_T-6x" id="sam-footer" aria-label="footer-navigation">
+<footer id="sam-footer" aria-label="footer-navigation">
   <nav class="sam-footer-wrapper">
     <div class="sam-footer-body usa-grid">
       <div class="sam-footer-logo usa-width-one-sixth">
