--- a/src/ui-kit/form-controls/searchbar/searchbar.template.html
+++ b/src/ui-kit/form-controls/searchbar/searchbar.template.html
@@ -1,4 +1,4 @@
-<div class="usa-grid m_B-6x" id="search-div">
+<div class="usa-width-one-whole m_B-6x" id="search-div">
 
   <form class="usa-search relative" onsubmit="return false;">
 
