minor fix on banner

--- a/src/ui-kit/banner/banner.template.html
+++ b/src/ui-kit/banner/banner.template.html
@@ -21,7 +21,7 @@
             <span><i class="fa fa-bank"></i> </span>
           </div>
         </div>
-        <div class="usa-width-three-fourths">
+        <div class="usa-width-three-fourths m_T-4x">
           <p><strong> The .gov means it's official.</strong><br>
             Federal government websites always use a <strong>.gov</strong> or .mil domain. Before
             sharing
@@ -36,7 +36,7 @@
             <span><i class="fa fa-lock"></i> </span>
           </div>
         </div>
-        <div class="usa-width-three-fourths">
+        <div class="usa-width-three-fourths m_T-4x">
           <p>This site is also protected by an SSL(Secure Sockets Layer) certificate that's been signed by
             the
             U.S.
