--- a/src/ui-kit/header-links/header-links.template.html
+++ b/src/ui-kit/header-links/header-links.template.html
@@ -3,6 +3,7 @@
   <div class=" m_R-3x align-top m_B-0x"><a class="usa-nav-link white-text sign-in-link">Sign In</a></div>
   <div class="white-text align-top m_B-0x">|</div>
   <div class="m_L-3x m_R-3x align-top m_B-0x"><a class="usa-nav-link white-text sign-up-link">Sign Up</a></div>
+  <div class="arrow-up"  *ngIf="showDropdown"></div>
   <div class="dropdown usa-grid-full p_B-2x" *ngIf="showDropdown" samClickOutside (clickOutside)="onClickOutside()">
     <div class="usa-width-one-half m_R-0 m_T-1x" *ngFor="let item of dropdownData">
       <div class="item-margin usa-width-one-half m_T-1x">
