--- a/src/ui-kit/footer/footer.template.html
+++ b/src/ui-kit/footer/footer.template.html
@@ -25,7 +25,7 @@
         <li class=" usa-width-one-fourth">
           <h4 class="m_T-0 sam-footer-head">Customer Service</h4>
           <ul class="sam-footer-links usa-unstyled-list">
-            <li class="m_B"><a href="#" title="Online Help">Online Help</a></li>
+            <li class="m_B"><a [routerLink]="['/help/overview']" title="Online Help">Online Help</a></li>
             <li class="m_B"><a class="usa-external_link-alt" href="https://fsd.gov/fsd-gov/login.do" title="Contact Federal Service Desk">Contact Federal Service Desk</a></li>
             <li class="m_B"><a href="#" title="Reference Library">Reference Library</a></li>
           </ul>
