--- a/src/ui-kit/header-links/header-links.template.html
+++ b/src/ui-kit/header-links/header-links.template.html
@@ -1,5 +1,5 @@
 <div class="pull-right align-top relative">
-  <div class="align-top m_B-0x p_R-3x "><a class="usa-nav-link" [ngClass]="{'link-disabled':showDropdown}"(click)="onMenuClick()"><i class="fa fa-bars white-text"></i></a></div>
+  <div class="align-top m_B-0x p_R-3x "><a class="usa-nav-link" *ngIf="showOptional" [ngClass]="{'link-disabled':showDropdown}"(click)="onMenuClick()"><i class="fa fa-bars white-text"></i></a></div>
   <div class=" m_R-3x align-top m_B-0x"><a class="usa-nav-link white-text sign-in-link">Sign In</a></div>
   <div class="white-text align-top m_B-0x">|</div>
   <div class="m_L-3x m_R-3x align-top m_B-0x"><a class="usa-nav-link white-text sign-up-link">Sign Up</a></div>
