--- a/src/ui-kit/footer/footer.template.html
+++ b/src/ui-kit/footer/footer.template.html
@@ -1,6 +1,13 @@
 <footer id="sam-footer" aria-label="footer-navigation">
   <nav class="sam-footer-wrapper">
     <div class="sam-footer-body usa-grid">
+      <!--<div class="sam-footer-logo usa-width-one-sixth">-->
+        <!--<a href="http://www.gsa.gov">-->
+          <!--<img src="assets/img/logos/gsa-reverse.png" />-->
+          <!--<span>General Services Administration Website</span>-->
+        <!--</a>-->
+      <!--</div>-->
+
       <div class="sam-footer-logo usa-width-one-sixth">
         <a href="http://www.gsa.gov"><span>General Services Administration Website</span></a>
       </div>
