Add in external links and implement latest wireframe

--- a/src/ui-kit/footer/footer.template.html
+++ b/src/ui-kit/footer/footer.template.html
@@ -26,7 +26,7 @@
           <h4 class="m_T-0 sam-footer-head">Customer Service</h4>
           <ul class="sam-footer-links usa-unstyled-list">
             <li class="m_B"><a [routerLink]="['/help/overview']" title="Online Help">Online Help</a></li>
-            <li class="m_B"><a class="usa-external_link-alt" href="https://fsd.gov/fsd-gov/login.do" title="Contact Federal Service Desk" *ngIf="linkToggle()">Contact Federal Service Desk</a></li>
+            <li class="m_B"><a class="usa-external_link-alt" href="https://www.fsd.gov/fsd-gov/home.do" title="Contact Federal Service Desk" *ngIf="linkToggle()">Contact Federal Service Desk</a></li>
             <li class="m_B"><a [routerLink]="['/help/reference']" title="Reference Library">Reference Library</a></li>
           </ul>
         </li>
