--- a/src/ui-kit/header-links/header-links.template.html
+++ b/src/ui-kit/header-links/header-links.template.html
@@ -1,4 +1,4 @@
-<div class="pull-right align-top relative">
+<div class="pull-right align-top relative header-links">
   <div class="align-top m_B-0x p_R-3x " >
     <button class="menu-link header-link" title="menu" [ngClass]="{'link-disabled':showDropdown}" (click)="onMenuClick()">
       <i class="fa fa-bars white-text"></i>
