Fix condensed search bar 508 compliance

--- a/src/ui-kit/form-controls/searchbar/searchbar.template.html
+++ b/src/ui-kit/form-controls/searchbar/searchbar.template.html
@@ -21,6 +21,7 @@
     <div class="relative div-right">
       <button type="submit"
               class="usa-button-primary usa-search-submit search-btn" (click)="onSearchClick()">
+        <span class="usa-sr-only">searchBtn</span>
         <span class="usa-search-submit-text">{{searchBtnText}}
           <i class="fa" [ngClass]="{'fa-search':isSizeSmall()}"></i>
         </span>
