use alert url variable instead of hardcode value

--- a/src/ui-kit/footer/footer.template.html
+++ b/src/ui-kit/footer/footer.template.html
@@ -16,7 +16,7 @@
           <h4 class="m_T-0 sam-footer-head">About SAM.GOV</h4>
           <ul class="sam-footer-links usa-unstyled-list">
             <li class="m_B"><a href="#" title="Who we are" *ngIf="linkToggle()">Who we are</a></li>
-            <li class="m_B"><a [routerLink]="['/alerts']" title="System Alerts">System Alerts</a></li>
+            <li class="m_B"><a [routerLink]="[alertsUrl]" title="System Alerts">System Alerts</a></li>
             <li class="m_B"><a class="usa-external_link-alt" href="https://interact.gsa.gov/group/integrated-award-environment-iae-industry-community" title="Explore Our Community">Explore Our Community</a></li>
           </ul>
         </li>
