--- a/src/ui-kit/form-controls/input-autocomplete/input-autocomplete.template.html
+++ b/src/ui-kit/form-controls/input-autocomplete/input-autocomplete.template.html
@@ -1,9 +1,7 @@
-<div style="position:relative">
-    <div class="">
+ <div class="">
         <input type="text" class="search-inputbar" (blur)="autocompleteBlur($event)" aria-autocomplete="list" aria-haspopup="true" (keydown)="keydownHandler($event)" [(ngModel)]="searchTerm" (ngModelChange)="searchTermChange($event)" maxlength="75"/>
         <span [ngClass]="resetIconClass"><i class="fa fa-times-circle" (click)="onResetClick()"></i></span>
-    </div>
-    <ul (blur)="autocompleteBlur($event)" #autocompletelist tabindex="0" *ngIf="autoCompleteToggle" class="usa-agency-picker-autocomplete" (mousedown)="cancelBlurMethod()">
+    <ul (blur)="autocompleteBlur($event)" #autocompletelist tabindex="0" *ngIf="autoCompleteToggle" class="usa-search-autocomplete" (mousedown)="cancelBlurMethod()">
         <li *ngIf="showAutocompleteMsg" class="autocomplete-msg">{{autocompleteMsg}}</li>
         <li *ngFor="let result of autoComplete; let i = index;" (mouseover)='autocompleteMouseover(i)' [ngClass]="i === autocompleteIndex?'autocomplete-selected':''" (mousedown)="autocompleteSelection(result)">{{result}}</li>
     </ul>
