--- a/src/ui-kit/form-controls/searchbar/searchbar.template.html
+++ b/src/ui-kit/form-controls/searchbar/searchbar.template.html
@@ -33,7 +33,7 @@
       <!--<span [ngClass]="resetIconClass"><i class="fa fa-times-circle" (click)="onResetClick()"></i></span>-->
     <!--</div>-->
     <div class="relative div-fill">
-    <samInputAutocomplete [serviceName]="'suggestions'" [index]="filterValue" (searchTermEmit)="callSearch($event)" [searchTerm]="keyword"></samInputAutocomplete>
+    <samInputAutocomplete [serviceName]="'suggestions'" [index]="filterValue" (searchTermEmit)="callSearch($event)" [searchTerm]="keyword" (keyEnterEmit)="onSearchClick()"></samInputAutocomplete>
     </div>
   </form>
 
