--- a/src/ui-kit/form-controls/searchbar/searchbar.template.html
+++ b/src/ui-kit/form-controls/searchbar/searchbar.template.html
@@ -17,9 +17,14 @@
                  (modelChange)='onSelect($event)'>
       </samSelect>
     </div>
-    
+
     <div class="relative div-fill">
-      <samInputAutocomplete [serviceName]="'suggestions'" [index]="filterValue" (searchTermEmit)="callSearch($event)" [searchTerm]="keyword" (keyEnterEmit)="onSearchClick()"></samInputAutocomplete>
+      <samInputAutocomplete [serviceName]="'suggestions'"
+                            [index]="filterValue"
+                            (searchTermEmit)="callSearch($event)"
+                            [searchTerm]="keyword"
+                            (keyEnterEmit)="onSearchClick()">
+      </samInputAutocomplete>
     </div>
 
     <div class="relative div-right">
@@ -32,10 +37,6 @@
       </button>
     </div>
 
-    <!--<div class="relative div-fill">-->
-      <!--<input class="search-inputbar" type="search" name="search" aria-label="search-keyword" [(ngModel)]="keyword" (ngModelChange)="onKeywordChange()" [placeholder]="placeholder" (keyup.enter)="onSearchClick()">-->
-      <!--<span [ngClass]="resetIconClass"><i class="fa fa-times-circle" (click)="onResetClick()"></i></span>-->
-    <!--</div>-->
   </form>
 
 </div>
