Add in links on footer

--- a/src/ui-kit/footer/footer.template.html
+++ b/src/ui-kit/footer/footer.template.html
@@ -26,7 +26,7 @@
             <li class="m_B"><a class="usa-external_link-alt" href="https://www.acquisition.gov/" title="Acquisition.gov">Acquisition.gov</a></li>
             <li class="m_B"><a class="usa-external_link-alt" href="https://www.usaspending.gov/Pages/Default.aspx" title="USASpending.gov">USASpending.gov</a></li>
             <li class="m_B"><a class="usa-external_link-alt" href="http://www.grants.gov/" title="Grants.gov">Grants.gov</a></li>
-            <li class="m_B"><a href="#" title="More Partners" *ngIf="linkToggle()">More Partners</a></li>
+            <li class="m_B"><a [routerLink]="['/help/partners']" title="More Partners" >More Partners</a></li>
           </ul>
         </li>
         <li class=" usa-width-one-fourth">
