- Registration component new branch source

--- a/src/ui-kit/alert/alert.template.html
+++ b/src/ui-kit/alert/alert.template.html
@@ -2,7 +2,7 @@
   <div class="usa-alert-body">
     <h3 class="usa-alert-heading">
       {{title}}
-      <span class="pull-right" *ngIf="showClose">
+      <span class="pull-right usa-alert-close" *ngIf="showClose">
         <a><i class="fa fa-times-circle" (click)="onDismissClick()"></i></a>
       </span>
     </h3>
