--- a/src/ui-kit/multiselect-dropdown/multiselect-dropdown.template.html
+++ b/src/ui-kit/multiselect-dropdown/multiselect-dropdown.template.html
@@ -1,5 +1,5 @@
 <div class="dropdown" samClickOutside (clickOutside)="onMoveOutside()" style="display: inline-block">
-    <div class="dropdown-title pointer" role="button" tabindex="0"
+    <div class="dropdown-title pointer" [ngClass]='disabled && "disabled"' role="button" tabindex="0"
         (click)="toggleItemList($event)" (keydown)="toggleItemList($event)">
         {{elementLabel}}
         <span><i class="fa fa-chevron-down"></i></span>
