--- a/src/ui-kit/alert/alert.template.html
+++ b/src/ui-kit/alert/alert.template.html
@@ -1,6 +1,6 @@
 <div class="usa-alert" [ngClass]="[selectedType, class]" [ngStyle]="position" [hidden]="!states.show" #alert>
   <span class="usa-alert-close" *ngIf="showClose">
-    <a><i class="fa fa-times-circle" (click)="onDismissClick()"></i></a>
+    <a><i class="fa fa-times-circle" (click)="close()"></i></a>
   </span>
   <div class="usa-alert-body">
     <h3 class="usa-alert-heading" [innerText]="title"></h3>
