--- a/src/ui-kit/form-controls/input-autocomplete/input-autocomplete.template.html
+++ b/src/ui-kit/form-controls/input-autocomplete/input-autocomplete.template.html
@@ -3,6 +3,6 @@
    <span class="{{ searchTerm?.length > 0 ? 'reset-icon-active' : 'reset-icon'}}"><i class="fa fa-times-circle" (click)="onResetClick()"></i></span>
     <ul (blur)="autocompleteBlur($event)" #autocompletelist tabindex="0" *ngIf="autoCompleteToggle" class="usa-search-autocomplete" (mousedown)="cancelBlurMethod()">
         <li *ngIf="showAutocompleteMsg" class="autocomplete-msg">{{autocompleteMsg}}</li>
-        <li *ngFor="let result of autoComplete; let i = index;" (mouseover)='autocompleteMouseover(i)' (mousedown)="triggerSearch()" [ngClass]="i === autocompleteIndex?'autocomplete-selected':''">{{result}}</li>
+        <li *ngFor="let result of autoComplete; let i = index;" (mouseover)='autocompleteMouseover(i)' [ngClass]="i === autocompleteIndex?'autocomplete-selected':''" (mousedown)="autocompleteSelection(result)">{{result}}</li>
     </ul>
 </div>
