--- a/src/ui-kit/alert/alert.template.html
+++ b/src/ui-kit/alert/alert.template.html
@@ -3,7 +3,7 @@
     <a><i class="fa fa-times-circle" (click)="close()"></i></a>
   </span>
   <div class="usa-alert-body">
-    <h3 class="usa-alert-heading" [innerText]="title"></h3>
+    <h3 *ngIf="title" class="usa-alert-heading" [innerText]="title"></h3>
     <p class="usa-alert-text">
       {{description}}
       <ng-content></ng-content>
