--- a/src/ui-kit/sidenav/sidenav/sidenav.template.html
+++ b/src/ui-kit/sidenav/sidenav/sidenav.template.html
@@ -1,4 +1,4 @@
-<aside class="" >
+<aside>
   <ul class="usa-sidenav-list">
     <li *ngFor="let child of model.children; let $index = index">
       <a [ngClass]="{'usa-current': isSelected($index)}"(click)="updateUI($index, $event)">{{child.label}}</a>
