Fix: Search header value passed to select

--- a/src/ui-kit/form-controls/searchbar/searchbar.template.html
+++ b/src/ui-kit/form-controls/searchbar/searchbar.template.html
@@ -4,7 +4,7 @@
 
     <div class="relative div-left">
       <samSelect #filterSelect class="filter-select"
-                 [(model)]="selectModel"
+                 [(model)]="filterValue"
                  [name]="selectConfig.name"
                  [options]="selectConfig.options"
                  [label]="selectConfig.label"
