updates for components not in sam-ui-elements

--- a/src/ui-kit/form-controls/searchbar/searchbar.template.html
+++ b/src/ui-kit/form-controls/searchbar/searchbar.template.html
@@ -16,12 +16,7 @@
     </div>
 
     <div class="relative div-fill">
-      <samInputAutocomplete [serviceName]="'suggestions'"
-                            [index]="filterValue"
-                            (searchTermEmit)="callSearch($event)"
-                            [searchTerm]="keyword"
-                            (keyEnterEmit)="onSearchClick()">
-      </samInputAutocomplete>
+      <ng-content select="[custom-input]"></ng-content>
     </div>
 
     <div class="relative div-right">
