--- a/src/ui-kit/sidenav/menu-item/menu-item.template.html
+++ b/src/ui-kit/sidenav/menu-item/menu-item.template.html
@@ -1,6 +1,6 @@
 <ul class="usa-sidenav-sub_list">
   <li *ngFor="let child of children; let $index = index;">
-    <a #myElement (click)="updateUI($index, $event)"
+    <a #myElement tabindex="0" (click)="updateUI($index, $event)"
       [ngClass]="{'usa-current': isNodeSelected(myElement)}">
       {{child.label}}
     </a>
