Renamed collapsible class for component

--- a/src/ui-kit/collapsible/collapsible.template.html
+++ b/src/ui-kit/collapsible/collapsible.template.html
@@ -1,4 +1,4 @@
-<div class="collapsible">
+<div class="sam-collapsible">
   <!-- Div that contains title, filter summary, and expand/collapse button -->
   <div class="collapsible-header" [ngClass]="{bottomBorder: isFilterOpen()}">
     <span class="label">{{label}}</span>
