--- a/src/ui-kit/alert/alert.template.html
+++ b/src/ui-kit/alert/alert.template.html
@@ -1,3 +1,6 @@
+<div *ngIf="debug.enabled" [ngStyle]="debug.style">
+  <pre [innerText]="store | json"></pre>
+</div>
 <div class="usa-alert" [ngClass]="[selectedType, class]" [ngStyle]="position" [hidden]="!states.show" #alert>
   <span class="usa-alert-close" *ngIf="showClose">
     <a><i class="fa fa-times-circle" (click)="close()"></i></a>
