--- a/src/ui-kit/alert/alert.template.html
+++ b/src/ui-kit/alert/alert.template.html
@@ -7,7 +7,8 @@
   </span>
   <div class="usa-alert-body">
     <h3 *ngIf="title" class="usa-alert-heading" [innerText]="title"></h3>
-    <p class="usa-alert-text" [innerHTML]="description">
+    <p class="usa-alert-text">
+      {{description}}
       <ng-content></ng-content>
     </p>
   </div>
