update all the files with sam-front-end

--- a/src/sam-ui-elements-src/ui-kit/form-controls/autocomplete/autocomplete.template.html
+++ b/src/sam-ui-elements-src/ui-kit/form-controls/autocomplete/autocomplete.template.html
@@ -6,8 +6,8 @@
     <span *ngIf="showClearButton" class="{{ input.value.length > 0 ? 'reset-icon-active' : 'reset-icon'}}"><i class="fa fa-times-circle" (click)="clearInput()" (keyup.enter)="clearInput()" tabindex="0"></i></span>
     <span *ngIf="config && config.addOnIconClass" class="add-on"><i class="{{config.addOnIconClass}}"></i></span>
   </div>
-  
-  <ul class="sam-autocomplete-no-results" *ngIf="((results && results.length == 0) || (filteredKeyValuePairs && filteredKeyValuePairs.length == 0))  && hasFocus">
+
+  <ul class="sam-autocomplete-no-results" *ngIf="((results && results.length == 0) && (filteredKeyValuePairs && filteredKeyValuePairs.length == 0))  && hasFocus">
     <li>No results found</li>
   </ul>
   <!-- Lists data if array of strings is passed to component -->
