--- a/src/sam-ui-elements-src/ui-kit/wrappers/fieldset-wrapper/fieldset-wrapper.template.html
+++ b/src/sam-ui-elements-src/ui-kit/wrappers/fieldset-wrapper/fieldset-wrapper.template.html
@@ -1,6 +1,6 @@
 <div class='fieldset-wrapper' [class.usa-input-error]="!!errorMessage">
   <fieldset class="usa-fieldset-inputs usa-sans">
-    <legend [class.usa-input-error-label]="!!errorMessage">{{label}}</legend>
+    <legend [class.usa-input-error-label]="!!errorMessage">{{label}}<span *ngIf="required" class="usa-additional_text">Required</span></legend>
     <span *ngIf="errorMessage" class="usa-input-error-message">{{errorMessage}}</span>
     <span *ngIf="hint" class="usa-form-hint">{{hint}}</span>
     <ng-content></ng-content>
